<resources>
    <string name="app_name">RPN Calculator</string>
    <string name="memory_clear">MC</string>
    <string name="memory_plus">M+</string>
    <string name="memory_recall">MR</string>
    <string name="divide">/</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="multiply">x</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equal_to">=</string>
    <string name="dot">.</string>
    <string name="button_0">0</string>
    <string name="all_clear">AC</string>
    <string name="clear">C</string>
    <string name="result_screen">0</string>
    <string name="space">SPACE</string>
    <string name="infix_or_postfix">Infix</string>
</resources>